# grossbit-test

./: Dockerfile  README.md  docker-compose.yml
cash_machine/: alembic.ini  pyproject.toml
cash_machine/cash_machine/: app.py  check_generation.py  config.py  database.py  main.py
cash_machine/cash_machine/models/: base.py  item.py
cash_machine/cash_machine/repositories/: __init__.py  general.py  items.py
cash_machine/cash_machine/routers/: __init__.py  cash_machine.py  items.py  media.py
cash_machine/cash_machine/schemas/: checks.py  items.py
cash_machine/cash_machine/templates/: check.html
cash_machine/migrations/: env.py
cash_machine/migrations/versions/: 7316bc3b5c0f_init.py  d5260516853f_init.py
